Rewrite PatternNbtCodec